configs/hn-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hn-api-service
spec:
  type: NodePort
  selector:
    app: hn-api
  ports:
    - port: 3000
